<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backclothes"
    tools:context=".Clothes">

    <EditText
        android:id="@+id/text_inserted2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="#F6F6F6"
        android:ems="10"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/hello_blank_fragment"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#00190303"
        android:text="@string/hello_blank_fragment"
        android:textColor="#000000"
        android:textColorHint="#818181"
        android:textColorLink="#A8A8A8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <Button
        android:id="@+id/verifica2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="verificaC"
        android:text="@string/verifica"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_inserted2"
        app:layout_constraintVertical_bias="0.843" />

    <FrameLayout
        android:id="@+id/fragmentContainerView5"
        android:layout_width="336dp"
        android:layout_height="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956">

        <Button
            android:id="@+id/cluesBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:onClick="onClickCluesC"
            android:text="@string/Clues" />
    </FrameLayout>

    <EditText
        android:id="@+id/ghicitoare2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autoSizeTextType="uniform"
        android:background="@android:drawable/spinner_dropdown_background"
        android:backgroundTint="#F4F4F4"
        android:backgroundTintMode="add"
        android:ems="10"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:hint="@string/raspunde"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#000000"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#000000"
        android:text="@string/raspunde"
        android:textColor="#5D4037"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/back3"
        android:layout_width="38dp"
        android:layout_height="44dp"
        android:onClick="onClickX"
        android:text="@string/X"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnNextC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickNextC"
        android:text="@string/Next"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPrevC"
        app:layout_constraintTop_toBottomOf="@+id/text_inserted2"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/btnPrevC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="152dp"
        android:onClick="onClickPrevC"
        android:text="@string/Prev"
        app:layout_constraintBottom_toTopOf="@+id/fragmentContainerView5"
        app:layout_constraintEnd_toStartOf="@+id/btnNextC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_inserted2"
        app:layout_constraintVertical_bias="0.26" />
</androidx.constraintlayout.widget.ConstraintLayout>